docs/css/styles.css
/* ... */
.size16 {
    font-size: 16px;
}
.size18 {
    font-size: 18px;
}
.size20 {
    font-size: 20px;
}
.size24 {
    font-size: 24px;
}
.size28 { /* Used for Responder P, optically same size as .size24 for other families */
    font-size: 28px;
}
.size36 {
    font-size: 36px;
}
.size48 {
    font-size: 48px;
}
.size56 {
    font-size: 56px;
}
.size64 {
    font-size: 64px;
}
.size80 {
    font-size: 80px;
}
.size100 {
    font-size: 100px;
}

.aalt {
    font-feature-settings: 'aalt' 1; /* Access All Alternates */
}
.liga {
    font-feature-settings: 'liga' 1; /* Ligatures is default on */
}
.no-liga {
    font-feature-settings: 'liga' 0; 
}
.clig {
    font-feature-settings: 'clig' 1; 
}
.case {
    font-feature-settings: 'case' 1; 
}

.frac {
    font-feature-settings: 'frac' 1; /* Fractions */    
}
.tnum {
    font-feature-settings: 'tnum' 1; /* Table figures */
}
.onum {
    font-feature-settings: 'onum' 1; /* Old style figures */
}
.sups {
    font-feature-settings: 'sups' 1; /* Superior figures  & lower case */
}
.dnom {
    font-feature-settings: 'dnom' 1; /* Denomerator figures */
}
.sinf {
    font-feature-settings: 'sinf' 1; /* Inferiors figures & lower case */
}
.numr {
    font-feature-settings: 'numr' 1; /* Numerator figures */
}
.zero {
    font-feature-settings: 'zero' 1; /* Slashed zero */
}

.smcp {
    font-feature-settings: 'smcp' 1; /* Small caps */
}
.c2sc {
    font-feature-settings: 'c2sc' 1;
}
.c2sc-smcp {
    font-feature-settings: 'smcp' 1, 'c2sc' 1;
}

.swsh {
    font-feature-settings: 'swsh' 1; /* Set of selected swashes */
}
.ss01 {
    font-feature-settings: 'ss01' 1;
}
.no-ss01 {
    font-feature-settings: 'ss01' 0;
}
.ss02 {
    font-feature-settings: 'ss02' 1;
}
.ss03 {
    font-feature-settings: 'ss03' 1;
}
.ss04 {
    font-feature-settings: 'ss04' 1;
}
.ss04-clig {
    font-feature-settings: 'ss04' 1, 'clig' 1;
}
.ss05 {
    font-feature-settings: 'ss05' 1;
}
.ss05-clig {
    font-feature-settings: 'ss05' 1, 'clig' 1;
}
.ss06 {
    font-feature-settings: 'ss06' 1;
}
.ss06-clig {
    font-feature-settings: 'ss06' 1, 'clig' 1;
}
.ss07 {
    font-feature-settings: 'ss07' 1;
}
.ss07-clig {
    font-feature-settings: 'ss07' 1, 'clig' 1;
}
.ss08 {
    font-feature-settings: 'ss08' 1;
}
.ss08-clig {
    font-feature-settings: 'ss08' 1, 'clig' 1;
}
.ss09 {
    font-feature-settings: 'ss09' 1;
}
.ss09-clig {
    font-feature-settings: 'ss09' 1, 'clig' 1;
}
.ss10 {
    font-feature-settings: 'ss10' 1;
}
.ss11 {
    font-feature-settings: 'ss12' 1;
}
.ss12 {
    font-feature-settings: 'ss12' 1;
}
.ss13 {
    font-feature-settings: 'ss13' 1;
}
.ss14 {
    font-feature-settings: 'ss14' 1;
}
.ss15 {
    font-feature-settings: 'ss15' 1;
}
.ss16 {
    font-feature-settings: 'ss16' 1;
}
.ss17 {
    font-feature-settings: 'ss17' 1;
}
.ss18 {
    font-feature-settings: 'ss18' 1;
}
.ss19 {
    font-feature-settings: 'ss19' 1;
}
.ss20 {
    font-feature-settings: 'ss20' 1;
}

.ss12-ss17 {
    font-feature-settings: 'ss12' 1, 'ss17' 1;
}
.ss12-ss18 {
    font-feature-settings: 'ss12' 1, 'ss18' 1;
}
.ss12-ss19 {
    font-feature-settings: 'ss12' 1, 'ss19' 1;
}
.ss12-ss20 {
    font-feature-settings: 'ss12' 1, 'ss20' 1;
}

/* Header logo */

header .logo { /* Floating left box with logo */
    display: block;
    float: left;
    width: 260px; /* Make distance to familyName */
}
header .familyName { /* Floating left box with current family name */
    display: block;
    float: left;
    font-size: 40px;
    text-align: left;
    padding-top: 5px; 
    transform: translateY(calc(0.105em)); /* shift so baseline hits 50px */
    animation: fadeIn 0.2s ease-out forwards;
}

header .familyName:hover {
    color: #E31C79;
}

header .familyName .andMore {
    animation: fadeIn 0.2s ease-out forwards;
}
header .logo img {
    padding-top: 4px;
    height: 42px;
}
header .smallLogo { /* Text logo for really small screen sizes, no space for image */
    transform: translateY(calc(0.4em)); /* shift so baseline hits 50px */
    display: none;
}
header .smallLogo a { /* Text logo for really small screen sizes, no space for image */
    color: white;
    font-family: "Upgrade Semibold";
    font-size: 38px;
    letter-spacing: 0.25em;
    text-decoration: none;
}
header .smallLogo a:hover { /* Text logo for really small screen sizes, no space for image */
    color: #E0E0E0;
}

/* Header navigation */

header .navbar {
    display: block;
    float: right;
    padding: 4px;
    padding-right: 15px;
    animation: slideLeft 0.4s ease-out forwards;
}
header .navbar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
}
header .navbar li {
    margin-right: 10px;
}
header .navbar a {
    color: white;
    font-size: 1.2em;
    text-decoration: none;
}
header .navbar a:hover {
    color: #E31C79;
    text-decoration: none;
}

header .navbar .current{
    color: #E31C79;  
}

header .hamburger {
    position: absolute;
    top:0px;
    right:0px;
    font-size: 30px;
    cursor: pointer;
    float: right;
    padding: 20px;
    padding-right: 40px;
    animation: fadeIn 0.7s ease-out forwards;
    z-index: 100000000;
}

header .hamburger:hover{
    color: #E31C79;  
}

h2 a.active {
  color: red; /* actieve linkkleur */
  font-weight: bold; /* optioneel */
}

/* Slideshow */

.slideshow {
    padding-top: 60px;
    width: 100%;
    height: 500px;
    position: relative;
    overflow: hidden;
}

.slide {
    position: absolute;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 0;
    transition: opacity 1s ease-in-out;
    z-index: 0;
}

.slide.active {
    opacity: 1;
    z-index: 1;
}

/* Font selector */

.font-selector {
    padding: 30px;
}
.font-selector a {
    text-decoration: none;
}
/* ... */

